# routes/v1/CollectionsRoutes.php
@@ -1,0 +1,3 @@
+<?php
+
+Route::post('/users/{user}/collections', ['as' => 'collections.create', 'uses' => 'CollectionController@create'])->middleware('jwt.auth');
